# ProtocoloV2

./: .env.example  .gitignore  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  conf.py  gitignore..txt  gitignore.txt  pyproject.toml  requirements-docs.txt  requirements.txt  test_config.py
code/: Landsat_Col2.ipynb  download.py  hidroperiodo.py  productos.py  protocolov2.py  utils.py
code/.ipynb_checkpoints/: Landsat_Col2-checkpoint.ipynb
codigo/: download.py  hidroperiodo.py  productos.py  protocolov2.py  run_download.sh  utils.py
docs/source/: .readthedocs.yaml  api_reference.rst  codigo.rst  conf.py  index.rst  installation.md  modules.rst  protocolo.rst  usage.md
docs/source/modules/: index.rst  modules.rst  protocolo.coast.rst  protocolo.download.rst  protocolo.hidroperiodo.rst  protocolo.productos.rst  protocolo.protocolov2.rst  protocolo.rst  protocolo.utils.rst
protocolo/: __init__.py  analisis_escenas_nubosas.py  calcular_cloud_rbios.py  coast.py  config.py  download.py  envio_escenas_nubosas.py  hidroperiodo.py  proceso_automatico_completo.py  productos.py  protocolov2.py  regenerar_productos_ciclo_2024_25_paralelo.py  run_hydroperiod.sh  utils.py
source/: code.rst  codigo.rst  conf.py  hidroperiodo.rst  index.rst  modules.rst  protocolov2.rst
