[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "protocolo"
version = "2.5.1"
description = "Protocolo Landsat para monitorización de inundación en Doñana"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Diego Garcia Diaz", email = "diegogarcia@ebd.csic.es"},
]
dependencies = [
    "numpy",
    "pandas",
    "geopandas",
    "rasterio",
    "fiona",
    "shapely",
    "scipy",
    "matplotlib",
    "seaborn",
    "xarray",
    "opencv-python",
    "requests",
    "pymongo",
    "psycopg2-binary",
    "rasterstats",
    "python-dotenv",
    "landsatxplore",
    "GDAL",
]

[project.urls]
Homepage = "https://github.com/Digdgeo/ProtocoloV2"
Repository = "https://github.com/Digdgeo/ProtocoloV2"

[tool.setuptools.packages.find]
include = ["protocolo*"]
